Bug 511241 - fish:// progressbar shows 0% during copy job in notification
Summary: fish:// progressbar shows 0% during copy job in notification
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.19.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Pan Zhang
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-27 20:31 UTC by postix
Modified: 2025-11-10 08:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (246.95 KB, image/png)
2025-10-27 20:31 UTC, postix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2025-10-27 20:31:56 UTC
Created attachment 186244 [details]
Screenshot

STEPS TO REPRODUCE
1. Connected to a VPN
2. fish://user@domain/path
3. Copied in Dolphin files from folder A to folder B @ domain

OBSERVED RESULT
The progress notification shows n of N copied files, but the progress bar stayed at 0%.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20251021
KDE Plasma Version: 6.4.5
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0
Kernel Version: 6.17.3-1-default (64-bit)
Graphics Platform: Wayland
Comment 1 postix 2025-10-27 20:32:44 UTC
Dolphin 25.08.2
Comment 2 Bug Janitor Service 2025-11-10 01:36:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/2053
Comment 3 Méven 2025-11-10 08:29:08 UTC
Git commit 8546f33056ac3080e3fbf099279b79d1d9ed5d21 by Méven Car, on behalf of Pan Zhang.
Committed on 10/11/2025 at 08:14.
Pushed by meven into branch 'master'.

copyjob: Fallback to file-based progress when byte size is unavailable

Some remote protocols (e.g. fish://) cannot determine total byte sizes, causing CopyJob's percent to stay at 0% and progress bars to remain static. This patch switches progress reporting to Files when byte totals are unknown or no byte progress is reported, ensuring visible feedback.

M  +10   -1    src/core/copyjob.cpp

https://invent.kde.org/frameworks/kio/-/commit/8546f33056ac3080e3fbf099279b79d1d9ed5d21