copyjob: Fallback to file-based progress when byte size is unavailable

Some remote protocols (e.g. fish://) cannot determine total byte sizes, causing CopyJob's percent to stay at 0% and progress bars to remain static. This patch switches progress reporting to Files when byte totals are unknown or no byte progress is reported, ensuring visible feedback.

BUG: 511241